--- a/.github/workflows/pr_labeler.yml
+++ b/.github/workflows/pr_labeler.yml
@@ -11,6 +11,26 @@ jobs:
       contents: read
       pull-requests: write
     steps:
+      # remove labels
+      - name: Remove Labels
+        uses: actions/github-script@v3
+        with:
+          github-token: ${{secrets.PAT_FOR_AUTOMATION}}
+          script: |
+            const issue_number = context.issue.number;
+            const current_labels = await github.issues.listLabelsOnIssue({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: issue_number
+            });
+            for (const label of current_labels.data) {
+              await github.issues.removeLabel({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: issue_number,
+                name: label.name
+              });
+            }
       - name: Check Labels
         id: labeler
         uses: jimschubert/labeler-action@v1
