--- a/.github/workflows/pr_labeler.yml
+++ b/.github/workflows/pr_labeler.yml
@@ -12,27 +12,42 @@ jobs:
       pull-requests: write
     steps:
       # remove labels
-      - name: Remove Labels
-        uses: actions/github-script@v3
-        with:
-          github-token: ${{secrets.PAT_FOR_AUTOMATION}}
-          script: |
-            const issue_number = context.issue.number;
-            const current_labels = await github.issues.listLabelsOnIssue({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: issue_number
-            });
-            for (const label of current_labels.data) {
-              await github.issues.removeLabel({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: issue_number,
-                name: label.name
-              });
-            }
+      # - name: Remove Labels
+      #   uses: actions/github-script@v3
+      #   with:
+      #     github-token: ${{secrets.PAT_FOR_AUTOMATION}}
+      #     script: |
+      #       const issue_number = context.issue.number;
+      #       const current_labels = await github.issues.listLabelsOnIssue({
+      #         owner: context.repo.owner,
+      #         repo: context.repo.repo,
+      #         issue_number: issue_number
+      #       });
+      #       for (const label of current_labels.data) {
+      #         await github.issues.removeLabel({
+      #           owner: context.repo.owner,
+      #           repo: context.repo.repo,
+      #           issue_number: issue_number,
+      #           name: label.name
+      #         });
+      #       }
       - name: Check Labels
         id: labeler
         uses: jimschubert/labeler-action@v1
         with:
           GITHUB_TOKEN: ${{secrets.PAT_FOR_AUTOMATION}}
+
+      # assign to author
+      - name: Assign PR to author
+        uses: actions/github-script@v3
+        with:
+          github-token: ${{secrets.PAT_FOR_AUTOMATION}}
+          script: |
+            const issue_number = context.issue.number;
+            const author = context.payload.pull_request.user.login;
+            await github.issues.addAssignees({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: issue_number,
+              assignees: [author]
+            });
