--- a/.github/workflows/review_labeler.yml
+++ b/.github/workflows/review_labeler.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up GitHub CLI
         uses: actions/setup-gh@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT_FOR_AUTOMATION }}
 
       - name: Add or remove labels based on review
         run: |
